java9 compatability, move bytespec and midi-clj to the overtone-tree, catch some reflection warnings with typehints